# debug-cmake-FindMPI

./: CMakeLists.txt  README.md  try.sh
Modules/: FindMPI.cmake
